assets/css/main.scss
---
---
@use "sizes";
@use "colors";

html{
    background: colors.$background-default;
    color: colors.$text-default;

    font-family: "DM Sans", serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
    font-size: sizes.$fontsize-regular-s;
    line-height: sizes.$lineheight-regular-s;
}

// Main layout

body {
    margin: 0;
    padding: 0 sizes.$spacing-medium-dynamic-s;
    gap: sizes.$spacing-medium-dynamic-s;

    display: flex;
    flex-direction: column;
    grid-template-areas: 
        "header header header"
        "sidebar main main"
        "footer footer footer";

    @media (min-width: sizes.$breakpoint-m){
        display: grid;
        grid-template-columns: calc((100% - (sizes.$spacing-medium-dynamic-m * 2)) / 3);
        gap: sizes.$spacing-medium-dynamic-m;
        padding: 0 sizes.$spacing-medium-dynamic-m;
    }

    @media (min-width: sizes.$breakpoint-l){
        grid-template-columns: calc((100% - (sizes.$spacing-medium-dynamic-l * 2)) / 3);
        gap: sizes.$spacing-medium-dynamic-l;
        padding: 0 sizes.$spacing-medium-dynamic-l;
    }

    @media (min-width: 960px){ // Disable grid layout
        flex-direction: row;
        flex-wrap: wrap;
    }
}

.sidebar{
    grid-area: sidebar;

    nav{
        top: sizes.$spacing-medium-dynamic-s + 74px;
    }

    @media (min-width: sizes.$breakpoint-m){
        nav, .product-image{
            position: sticky;
            top: sizes.$spacing-medium-dynamic-m + 74px;
        }
    }
    @media (min-width: sizes.$breakpoint-l){
        nav, .product-image{
            top: sizes.$spacing-medium-dynamic-l + 74px;
        }
    }
}

.main{
    grid-area: main;
}

.full{
    grid-column: span 2;
}

// UI elem

header{
    grid-area: header;
    z-index: 100;
    padding-top: sizes.$spacing-medium-dynamic-s;
    position: sticky;
    top: 0;
    background: colors.$background-default;


    &.splash{
        position: relative;

        img.logo{
            width: 72px;
            height: 72px;
        }

        img.illustration{
            margin-left: auto;
            width: sizes.$image-splash-s;
        }

        nav{
            display: block;
            position: static;
            padding-right: 0;
        }
    
        @media (min-width: sizes.$breakpoint-m){
            img.illustration{
                width: sizes.$image-splash-m;
                position: absolute;
                right: 0;
                bottom: 0;
            }
        }

        @media (min-width: sizes.$breakpoint-l){
            img.illustration{
                width: sizes.$image-splash-l;
            }
        }
    }

    .controls{
        display: flex;
        flex-direction: row;
        border-bottom: 2px solid colors.$text-default;

        p{
            padding: sizes.$spacing-medium 0;
            flex-grow: 1;
            align-self: end;
        }
    }

    nav{
        min-height: 320px;
        padding: sizes.$spacing-medium;
        position: absolute;
        left: 0;
        right: 0;
    }
    
    &.expanded{
        #open{display: none;}
    }

    &:not(.expanded){
        nav#menu, #close{display: none;}
    }
    
    @media (min-width: sizes.$breakpoint-m){
        padding-top: sizes.$spacing-medium-dynamic-m;
    }

    @media (min-width: sizes.$breakpoint-l){
        padding-top: sizes.$spacing-medium-dynamic-l;
    }
}

footer{
    grid-area: footer;
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    flex-grow: 1;
    flex-basis: 100%;
    gap: sizes.$spacing-medium-dynamic-s;

    @media (min-width: sizes.$breakpoint-m){
        gap: sizes.$spacing-medium-dynamic-m;
    }

    @media (min-width: sizes.$breakpoint-l){
        gap: sizes.$spacing-medium-dynamic-l;
    }

    ul{
        gap: sizes.$spacing-medium;
    }
    
    dl{
        flex-grow: 1;
        text-align: right;
        padding: 0 0 sizes.$spacing-large 0;
    }

    dd{
        margin: 0 0 sizes.$spacing-tiny 0;
    }
}

// Sections

.sidebar.details{
    place-items: flex-start;
    justify-content: space-between;
    display: flex;
    flex-direction: row;

    .product-image{
        flex: 1 1 auto;
        min-height: 24px;

        img{
            display: block;
            width: auto;
            max-height: 480px;
        }
    }

    @media (min-width: sizes.$breakpoint-m){
        .product-image img{
            width: 100%;
            height: auto;
            max-width: 240px;
            max-height: none;
        }
    }
}

// Lists

nav{
    margin: 0;
    padding: sizes.$spacing-medium 0;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    place-items: flex-start;
}

nav a{
    padding: sizes.$spacing-small 0;
    display: inline-block;

    color: colors.$text-default;
    font-family: "DM Mono", serif;
    font-weight: 400;
    font-style: normal;
    text-decoration: none;

    img{
        width: 24px;
        height: 24px;
    }

    &:not([href]){
        color: colors.$text-secondary;
        pointer-events: none;
    }
}

header nav{ // Specific colors for header navigation
    background-color: colors.$background-inverted;

    a{
        color: colors.$text-inverted;

        &:hover{
            color: colors.$text-inverted-hover;
        }
    }
}

ul{
    margin: 0;
    padding: 0;
    list-style: none;

    &.horizontal{
        display: flex;
        flex-direction: row;
    }
}

ul.list{
    // display: flex;
    // flex-direction: column;
    // flex-basis: 50%;
    // flex-grow: 1;
    // max-width: 100%;

    display: flex;
    flex-direction: column;
    gap: sizes.$spacing-medium-dynamic-s;

    @media (min-width: sizes.$breakpoint-m){
        gap: sizes.$spacing-medium-dynamic-m;
    }

    @media (min-width: sizes.$breakpoint-l){
        gap: sizes.$spacing-medium-dynamic-l;
    }
}

// Text elements

h1, h2, h3, h4, h5, h6{
    margin: 0;
}

h1{
    font-size: sizes.$fontsize-huge-s;
    line-height: sizes.$lineheight-huge-s;
    font-weight: 700;
    margin: sizes.$spacing-medium 0;

    @media (min-width: sizes.$breakpoint-m){
        font-size: sizes.$fontsize-huge-m;
        line-height: sizes.$lineheight-huge-m;
    }

    @media (min-width: sizes.$breakpoint-l){
        font-size: sizes.$fontsize-huge-l;
        line-height: sizes.$lineheight-huge-l;
    }
}

h2{
    font-size: sizes.$fontsize-large-s;
    line-height: sizes.$lineheight-large-s;
    font-weight: 700;

    @media (min-width: sizes.$breakpoint-m){
        font-size: sizes.$fontsize-large-m;
        line-height: sizes.$lineheight-large-m;
    }

    @media (min-width: sizes.$breakpoint-l){
        font-size: sizes.$fontsize-large-l;
        line-height: sizes.$lineheight-large-l;
    }
}

h3{
    font-size: sizes.$fontsize-small-s;
    line-height: sizes.$lineheight-small-s;
    font-weight: 700;

    @media (min-width: sizes.$breakpoint-m){
        font-size: sizes.$fontsize-small-m;
        line-height: sizes.$lineheight-small-m;
    }

    @media (min-width: sizes.$breakpoint-l){
        font-size: sizes.$fontsize-small-l;
        line-height: sizes.$lineheight-small-l;
    }
}

p{
    margin: 0 0 sizes.$spacing-medium 0;
    font-size: sizes.$fontsize-regular-s;
    line-height: sizes.$lineheight-regular-s;

    @media (min-width: sizes.$breakpoint-m){
        font-size: sizes.$fontsize-regular-m;
        line-height: sizes.$lineheight-regular-m;
        margin: 0 0 sizes.$lineheight-regular-m 0;
    }

    @media (min-width: sizes.$breakpoint-l){
        font-size: sizes.$fontsize-regular-l;
        line-height: sizes.$lineheight-regular-l;
        margin: 0 0 sizes.$lineheight-regular-l 0;
    }
}

p.small{
    font-size: sizes.$fontsize-small-s;
    line-height: sizes.$lineheight-small-s;

    @media (min-width: sizes.$breakpoint-m){
        font-size: sizes.$fontsize-small-m;
        line-height: sizes.$lineheight-small-m;
    }

    @media (min-width: sizes.$breakpoint-l){
        font-size: sizes.$fontsize-small-l;
        line-height: sizes.$lineheight-small-l;
    }
}

p.tiny{
    font-size: sizes.$fontsize-small-s;
    line-height: sizes.$lineheight-small-s;
}

p.mono{
    font-family: "DM Mono", serif;
    font-style: normal;
    text-decoration: none;
}

.align{
    &.right{
        text-align: right;
    }
}

// Links and buttons

a{
    margin: 0;
    color: colors.$text-default;
    text-decoration: underline;

    &:hover{
        color: colors.$text-default;
        text-decoration: none;
    }

    img{
        display: block;
    }
}

a.padded{
    padding: sizes.$spacing-medium;
    display: inline-block;
    text-decoration: none;
}

.imagecard{

    grid-area: sidebar;
    max-height: 320px;
    width: 100%;
    display: block;
    object-fit: cover;
}

.card{
    display: flex;
    flex-direction: row;
    border: solid 1px colors.$border;
    text-decoration: none;

    &.manufacturer{
        flex-wrap: wrap;
        h2{
            flex: 0 1 80%;
        }
        ul, a{
            display: flex;
            flex-direction: column;
            flex: 0 0 100%;
            gap: sizes.$padding-small;
        }
    }

    img{
        width: sizes.$image-card-s;
        object-fit: contain;
        align-self: flex-start;
    }

    .content{
        display: flex;
        flex-wrap: wrap;
        flex-direction: column;
        width: 100%;
        gap: sizes.$spacing-small;
    }

    .meta{
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;
        gap: sizes.$spacing-small;

        p{
            font-family: "DM Mono", serif;
            font-style: normal;
            text-decoration: none;
        }
    }

    h2{
        flex-grow: 1;
        align-content: flex-end;
    }

    padding: sizes.$spacing-medium-dynamic-s;
    gap: sizes.$spacing-medium-dynamic-s;

    @media (max-width: sizes.$breakpoint-t){
        flex-direction: column;
    }

    @media (min-width: sizes.$breakpoint-m){
        padding: sizes.$spacing-medium-dynamic-m;
        gap: sizes.$spacing-medium-dynamic-m;
        img{width: sizes.$image-card-m;}
    }

    @media (min-width: sizes.$breakpoint-l){
        padding: sizes.$spacing-medium-dynamic-l;
        gap: sizes.$spacing-medium-dynamic-l;
        img{width: sizes.$image-card-l;}
    }
}

// Utility

dl{
    margin: 0 0 sizes.$padding-large 0;

    &.horizontal{
        display: grid;
        grid-template-rows: auto auto;
        grid-auto-columns: 96px;
        grid-auto-flow: column;
    }
}

dt{
    margin: 0 0 sizes.$spacing-tiny 0;
    padding: 0;

    font-family: "DM Mono", serif;
    font-weight: 500;
    font-style: normal;
    text-decoration: none;
    font-size: sizes.$fontsize-small-s;
    line-height: sizes.$lineheight-small-s;
}

dd{
    margin: 0 0 sizes.$spacing-medium 0;
    padding: 0;
    font-weight: 300;

    img{
        width: sizes.$padding-large;
    }
}

footer dd{
    margin: 0 0 sizes.$spacing-tiny 0;
}

hr{
    flex-grow: 1;
    flex-basis: 100%;
    margin: 0;
    border: none;
    border-top: 1px solid colors.$border;
}

.divider{
    width: 1px;
    background-color: colors.$border;

    @media (max-width: sizes.$breakpoint-m){
        display: none;
    }
}

// Hiding
.hide{
    display: none;;
}

